syntax = "proto3";
package kv;
option go_package="server/kv";

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
}
message ListRequest {}
message ListResponse{
  string key = 1;
  string value = 2;
}

service KV {
  rpc Put(PutRequest) returns (PutResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc List(ListRequest) returns (stream ListResponse);
}
